--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <br>
 
         <!-- image [sony-logo.png] -->
-
+<img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony">
       </div>
     </div>
   </body>
